# prolatex

./: .gitignore  Makefile  README.md  articulo.tex  ensayo.tex  generarproyecto.py  instalar.ps1  instalar.sh  presentacion.tex  pyproject.toml
src/generarproyecto/: __init__.py
src/generarproyecto/templates/: articulo.tex  ensayo.tex
templates/: articulo.tex  ensayo.tex  presentacion.tex  referencias.bib
