[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "generarproyecto"
version = "0.1.0"
description = "Generador de proyectos LaTeX a partir de plantillas predefinidas, orientado a proyectos de física."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
generarproyecto = "generarproyecto:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
generarproyecto = ["templates/*"]
